crates/dishaster-trial/tests/snapshots/trial_hunger_672fcfd4efd0e0bd.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 7435390023275438269
  trigger_topic: hunger
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 3
        text: "你们的[分量]也太少了，\\别看价格便宜，吃了还饿，\\这算消费体验吗？"
        emotion: 😭
        gesture: 🤞
        topic: hunger
      - id: 100
        text: "你们[菜品标签]太不明显了，\\很多菜都不知道是什么，\\特别是辣度也没有标注。"
        emotion: 😤
    response_options:
      - speech_id: 3
        keywords:
          - keyword: 分量
            options:
              - id: 293
                kind: question
                summary: 想吃吗
              - id: 84
                kind: agreement
                summary: 调整分量与补偿
              - id: 185
                kind: question
                summary: 看清了吗
      - speech_id: 100
        keywords:
          - keyword: 菜品标签
            options:
              - id: 212
                kind: objection
                summary: 很明显
    selected_response:
      speech_id: 100
      keyword_idx: 0
      option_idx: 3
    manager_speeches:
      - id: 212
        summary: 很明显
        text: "那个菜的颜色很明显是辣的，\\您应该自己注意。"
        emotion: 😐
    impact:
      reputation_score: -1.1110001
      mood_change: -0.11110001
      trust_change: -0.055550005
      patience_change: -2.2220001
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 3
    - 100
  continuation_depth: 0
