crates/dishaster-trial/tests/snapshots/trial_hunger_8bc6e858d0501168.snap
---
source: crates/dishaster-trial/tests/snapshot_tests.rs
---
session_info:
  seed: 10071993084810367336
  trigger_topic: hunger
  max_continuation_depth: 3
  temperature: 0.8
turns:
  - turn_number: 1
    diner_speeches:
      - id: 55
        text: "点了个[便宜菜]结果全是配料，\\几口就没了，\\商家良心在哪？"
        emotion: 😡
        gesture: 👎
        topic: hunger
      - id: 100
        text: "你们[菜品标签]太不明显了，\\很多菜都不知道是什么，\\特别是辣度也没有标注。"
        emotion: 😤
      - id: 45
        text: "你们把[菜名]写得太模糊，\\我点的口味完全不对，\\能不能标准化一下？"
        emotion: 😰
        gesture: 👎
        topic: quality
    response_options:
      - speech_id: 55
        keywords:
          - keyword: 便宜菜
            options:
              - id: 292
                kind: objection
                summary: 自愿购买
              - id: 284
                kind: objection
                summary: 自愿选择
              - id: 273
                kind: question
                summary: 关注菜品
      - speech_id: 100
        keywords:
          - keyword: 菜品标签
            options:
              - id: 212
                kind: objection
                summary: 很明显
              - id: 211
                kind: agreement
                summary: 完善标识
      - speech_id: 45
        keywords:
          - keyword: 菜名
            options:
              - id: 173
                kind: question
                summary: 能看看肉吗
              - id: 275
                kind: agreement
                summary: 标准说明
    selected_response:
      speech_id: 55
      keyword_idx: 0
      option_idx: 1
    manager_speeches:
      - id: 284
        summary: 自愿选择
        text: "这只是一种可选菜品，\\不强制购买，其他菜仍保持平价。"
        emotion: 🙂
      - id: 66
        summary: 提供临时餐
        text: "如需我们可以提供\\临时替代餐品\\以解决燃眉之急，\\并后续处理补偿。"
        emotion: 🙂
    impact:
      reputation_score: -0.5
      mood_change: -0.05
      trust_change: -0.025
      patience_change: -1
    continuation_decision: false
final_state:
  total_turns: 1
  asked_questions:
    - 55
    - 100
    - 45
  continuation_depth: 0
